<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <string name="const_notificacoes">Notificação</string>
    <string name="const_doacao">Doação</string>
    <string name="const_ajuda">Ajuda</string>
    -->

    <item
        android:id="@+id/id_menu"
        android:orderInCategory="100"
        android:title="@string/const_titulo_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/id_menu_notificacao"
        android:orderInCategory="100"
        android:title="@string/const_notificacoes"
        app:showAsAction="never" />
    <item
        android:id="@+id/id_menu_doacao"
        android:orderInCategory="100"
        android:title="@string/const_doacao"
        app:showAsAction="never" />
    <item
        android:id="@+id/id_menu_ajuda"
        android:orderInCategory="100"
        android:title="@string/const_ajuda"
        app:showAsAction="never" />


</menu>