<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/id_bt_verifica_sequencia"
        android:layout_width="195dp"
        android:layout_height="117dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/background_light"
        android:drawableTop="@drawable/icone_botoes"
        android:text="@string/verifica_sequencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/id_bt_gerar_estatistica"
        android:layout_width="195dp"
        android:layout_height="117dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp"
        android:background="@android:color/background_light"
        android:drawableTop="@drawable/icone_botoes"
        android:text="@string/gerar_estatistica"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_bt_verifica_sequencia" />

    <Button
        android:id="@+id/id_bt_quanto_ja_gastei"
        android:layout_width="195dp"
        android:layout_height="117dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/background_light"
        android:drawableTop="@drawable/icone_botoes"
        android:text="@string/quanto_ja_gastei"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_bt_gerar_estatistica" />

    <Button
        android:id="@+id/id_bt_qual_minha_chance"
        android:layout_width="195dp"
        android:layout_height="117dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/background_light"
        android:drawableTop="@drawable/icone_botoes"
        android:text="@string/Qual_minha_chance"
        app:layout_constraintStart_toEndOf="@+id/id_bt_quanto_ja_gastei"
        app:layout_constraintTop_toBottomOf="@+id/id_bt_encontrar_concurso" />

    <Button
        android:id="@+id/id_bt_encontrar_concurso"
        android:layout_width="195dp"
        android:layout_height="117dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:background="@android:color/background_light"
        android:drawableTop="@drawable/icone_botoes"
        android:text="@string/encontrar_concurso"
        app:layout_constraintStart_toEndOf="@+id/id_bt_gerar_estatistica"
        app:layout_constraintTop_toBottomOf="@+id/id_bt_gera_sequencia_ouro" />

    <Button
        android:id="@+id/id_bt_gera_sequencia_ouro"
        android:layout_width="195dp"
        android:layout_height="117dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/background_light"
        android:drawableTop="@drawable/icone_botoes"
        android:text="@string/gera_sequencia_ouro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/id_bt_verifica_sequencia"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/img_trevo_sorte_principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_bt_gerar_estatistica"
        app:srcCompat="@drawable/trevo_da_mega" />

</androidx.constraintlayout.widget.ConstraintLayout>